Add Jenkinsfile for updated crash1 pipeline